# CameraChessCalibration

./: .gitmodules  CMakeLists.txt  main.cpp
Include/Gui/: CameraCornerTableView.hpp  CameraSettingsWidget.hpp  CameraViewBase.hpp  FixedCameraView.hpp  MainWindow.hpp  StreamCameraView.hpp
Include/Video/: CameraSettings.hpp  CornerFinder.hpp  VideoStream.hpp
Src/Gui/: CameraCornerTableView.cpp  CameraSettingsWidget.cpp  CameraViewBase.cpp  FixedCameraView.cpp  MainWindow.cpp  StreamCameraView.cpp
Src/Video/: CameraSettings.cpp  CornerFinder.cpp  VideoStream.cpp
